# solvent-program

./: .gitignore  .prettierignore  .solitarc.js  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  package.json  tsconfig.json
.github/workflows/: audit.yaml  build.yaml  generate-sdk.yaml
migrations/: deploy.ts
programs/solvent/: Cargo.toml
programs/solvent-protocol/: Cargo.toml
programs/solvent-protocol/src/: common.rs  constants.rs  errors.rs  lib.rs  state.rs
programs/solvent-protocol/src/instructions/: claim_balance.rs  create_bucket.rs  deposit_nft.rs  deposit_nft_for_swap.rs  distribute_revenue.rs  liquidate_locker.rs  lock_nft.rs  migrate_droplets.rs  migrate_nft.rs  mod.rs  redeem_nft.rs  redeem_nft_for_swap.rs  set_locking_enabled.rs  set_staking_enabled.rs  stake_nft.rs  start_migration.rs  swap_nfts.rs  unlock_nft.rs  unstake_nft.rs  update_collection_info.rs  update_locking_params.rs  update_revenue_distribution_params.rs  update_revenue_distribution_state.rs  update_staking_params.rs
programs/solvent-protocol/tests/: tests.rs
programs/solvent/src/: constants.rs  lib.rs
programs/solvent/src/instructions/: claim_balance.rs  create_bucket.rs  deposit_nft.rs  migrate_droplets.rs  migrate_nft.rs  mod.rs  set_staking_enabled.rs  stake_nft.rs  start_migration.rs  unstake_nft.rs
programs/solvent/tests/: tests.rs
tests/: utils.ts
tests/idls/: solvent.json
tests/keypairs/: solvent-admin.json
tests/nft-mints/: smb.json
tests/tests/: common.ts
tests/tests/buckets/: claim-balance.ts  create-bucket.ts  update-collection-info.ts
tests/tests/deposit-nfts/: deposit-nfts.ts  redeem-nfts.ts  swap-nfts.ts
tests/tests/lock-nfts/: liquidate-locker.ts  lock-nfts.ts  unlock-nfts.ts  update-locking-params.ts
tests/tests/migration/: migrate-droplets.ts  migrate-nft.ts  start-migration.ts
tests/tests/misc/: claim-balance.ts
tests/tests/staking/: stake-nft.ts  unstake-nft.ts  update-staking-params.ts
tests/types/: solvent.ts
