[package]
name = "solvent-protocol"
version = "1.0.0"
description = "Earn yield with your NFTs and enable instant NFT trades and loans"
license = "AGPL-3.0-only"
homepage = "https://solvent.xyz/"
repository = "https://github.com/solventprotocol/solvent-program/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solvent_protocol"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-ids = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] } 
anchor-spl = "0.26.0"
solana-program = "1.14"
# mpl-token-metadata = { version = "1.2.7", features = ["no-entrypoint"] }
mpl-token-metadata = { version="1.9.0", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = { version = "1.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
test-case = "2.0.2"
assert-panic = "1.0.1"
