[package]
name = "solvent"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solvent"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-ids = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] } 
anchor-spl = "0.24.2"
solana-program = "~1.9.13"
mpl-token-metadata = { version = "1.2.7", features = ["no-entrypoint"] }
gem_farm = { git = "https://github.com/solventprotocol/gem-farm", branch = "main", features=["cpi"] }
gem_bank = { git = "https://github.com/solventprotocol/gem-farm", branch = "main", features=["cpi"] }

[dev-dependencies]
test-case = "2.0.2"
assert-panic = "1.0.1"
